tests/fail/registering/dummy variable with a pure sort.mmu
(sort s  pure   )
(term a ((x s)) (s ()))
